quarkus  Hibernate ORM with Panache

--- a/quarkus-mysql-example/src/main/resources/application.properties
+++ b/quarkus-mysql-example/src/main/resources/application.properties
@@ -3,5 +3,5 @@ quarkus.datasource.url: jdbc:mysql://localhost:3306/mengka
 quarkus.datasource.username: root
 quarkus.datasource.password: 544027354
 quarkus.hibernate-orm.log.sql: true
-quarkus.hibernate-orm.database.generation: drop-and-create
-quarkus.hibernate-orm.sql-load-script: import.sql
+#quarkus.hibernate-orm.database.generation: drop-and-create
+#quarkus.hibernate-orm.sql-load-script: import.sql
