--- a/quarkus-mysql-example/pom.xml
+++ b/quarkus-mysql-example/pom.xml
@@ -53,6 +53,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-jdbc-mysql</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-spring-data-jpa</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
